2003-07-03  William Jon McCann  <mccann@jhu.edu>

	* src/strategy.h: Removed dos line endings.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* data/blackjack.schemas.in: Remove full-stop from the end of
	short descriptions.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* src/card.cpp (bj_card_load_pixmaps): 
	* src/slot.cpp (bj_slot_load_pixmaps): Use g_build_filename to make paths.

	* src/blackjack.cpp (main): g_build_filename needs to be NULL terminated.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* BUGS: 
	* TODO: Update.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* src/blackjack.c:
	* src/blackjack.h (BJ_RULES_DIR): Remove slash from directory.
	We will let g_build_filename add directory separators.

	* src/game.cpp (bj_game_find_and_read_rules)
	(bj_game_eval_installed_file): Use g_build_filename to construct
	paths.

	* src/strategy.cpp: Fixed compiler warning and converted
	to UNIX format line ending.

	* src/splash.cpp (expose_event): 
	* src/player.cpp (showOptions): 
	* src/hand.cpp (bj_hand_get_best_option_string): 
	* src/game.cpp (bj_game_find_rules): 
	* src/draw.cpp (bj_draw_chips): Fixed compiler warnings.

	* src/menu.cpp: 
	* src/dialog.cpp: 
	* src/blackjack.cpp: 
	* src/game.cpp: Only use splash window when we aren't
	using a cache file.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* src/blackjack.h: Fix typo.

	* src/dialog.cpp (show_preferences_dialog): Use mnemonics
	in preferences notebook tab labels.

2003-06-13  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.cpp (select_rule_cb): Make dialog insensitive
	while loading new rules.

	* data/blackjack.schemas.in: 
	* data/Makefile.am (schemadir): Install gconf schemas.
	
	* src/blackjack.cpp: #define gconf key names.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/menu.cpp: 
	* src/blackjack.cpp: i18n fixes from Christian Neumair (bug #114875).

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.cpp: 