@@ -59,9 +59,9 @@ endif
 	-$(mkinstalldirs) $(DESTDIR)$(scoredir)
 	$(mkinstalldirs) $(DESTDIR)$(bgdir)
 	-for i in easy difficult ; do \
-		touch $(DESTDIR)$(scoredir)/mahjongg.$$i.scores \
-		chown $(scores_user):$(scores_group) $(DESTDIR)$(scoredir)/mahjongg.$$i.scores \
-		chmod 664 $(DESTDIR)$(scoredir)/mahjongg.$$i.scores \
+		touch $(DESTDIR)$(scoredir)/mahjongg.$$i.scores; \
+		chown $(scores_user):$(scores_group) $(DESTDIR)$(scoredir)/mahjongg.$$i.scores; \
+		chmod 664 $(DESTDIR)$(scoredir)/mahjongg.$$i.scores; \
 	done
 	-if test "x$(setgid)" = "xtrue"; then chgrp $(scores_group) $(DESTDIR)$(bindir)/mahjongg && chmod 2555 $(DESTDIR)$(bindir)/mahjongg ; fi
 	$(mkinstalldirs) $(DESTDIR)$(Gamesdir)
