@@ -1,3 +1,8 @@
+2003-07-04  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* data/Makefile.am (install-data-local): Use a tab rather than
+	spaces in the Makefile.
+
 2003-07-03  William Jon McCann  <mccann@jhu.edu>
 
 	* src/strategy.h: Removed dos line endings.
